--- a/danusys-platform/src/main/resources/templates/fragments/config/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/config/nav.html
@@ -4,7 +4,7 @@
         <ul class="accordion">
         <th:block th:with="municipality=${@environment.getProperty('municipality.name')}">
             <li th:if="${municipality == '41210000'}" id="one" class="multi">
-                <a href="#one">스마트 가로등</a>
+                <a href="#one">스마트 보안등</a>
                 <ul class="accordion_sub_menu">
                     <!--<li id="dimmingGroup"><a href="/pages/config/dimmingGroup">디밍 그룹 설정</a></li>-->
                     <li id="dimmingSet"><a href="/pages/config/dimmingSet">디밍 설정</a></li>
