--- a/danusys-platform/src/main/resources/templates/view/pages/config/dimmingSet.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/dimmingSet.html
@@ -10,7 +10,7 @@
         <i><img src="/images/default/settingTitle.svg"></i>
         <span>환경설정</span>
         <i><img src="/images/default/arrowNext.svg"></i>
-        <span>스마트 가로등</span>
+        <span>스마트 보안등</span>
         <i><img src="/images/default/arrowNext.svg"></i>
         <span>디밍 설정</span>
     </h4>
