--- a/danusys-platform/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/default.html
@@ -68,5 +68,8 @@
     <script type="text/javascript" src="/js/pages/dimming.js"></script>
     <script type="text/javascript" src="/js/pages/faceDetection.js"></script>
     <script type="text/javascript" src="/js/pages/stats.js"></script>
+
+    <script type="text/javascript" src="/js/pages/peopleCount.js"></script>
+    <script type="text/javascript" src="/js/pages/electricity.js"></script>
 </th:block>
 </html>
