통계 facility opt 데이터 추가 6
- 타입 커몬코드 조회 -> stats 내부 codeName 조회로 변경.
- 데이터 테이블 조회시 codeName 누락된 사항 수정

--- a/danusys-platform/src/main/resources/templates/view/pages/statistics.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/statistics.html
@@ -69,7 +69,7 @@
             <div class="article_title">
                 <dl class="title">
                     <dt><span class="event_type"></span> 목록</dt>
-                    <dd><span class="count">123</span>건</dd>
+                    <dd><span class="count"></span>건</dd>
                 </dl>
             </div>
             <div class="search_table">
