관제 및 조회 항목명 변경

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -252,7 +252,7 @@
                 <div class="area_right_text" data-group="stationInfo">
                     <ul>
                         <li><!--data-value에 prop 키값을 넣으세요-->
-                            <span>관리 번호</span>
+                            <span>No.</span>
                             <input data-value="stationSeq" type="text" disabled>
                         </li>
                         <li>
@@ -260,7 +260,7 @@
                             <input data-value="stationKindName" type="text" disabled>
                         </li>
                         <li>
-                            <span>개소 명</span><!-- 스마트 분전함, 스마트 정류장 -->
+                            <span>관리 번호</span><!-- 스마트 분전함, 스마트 정류장 -->
                             <input data-value="stationName" type="text" disabled>
                         </li>
                         <li>
@@ -272,7 +272,7 @@
                             <input data-value="administZoneName" type="text" disabled>
                         </li>
                         <li>
-                            <span>개소 주소</span>
+                            <span>명칭</span>
                             <input data-value="address" type="text" disabled>
                         </li>
                     </ul>
@@ -1011,8 +1011,8 @@
                             <input data-value="eventKindName" type="text" placeholder="이벤트 종류" disabled>
                         </li>
                         <li>
-                            <span>개소명</span> <!--스마트정류장, 폴, 분전함, 격납고 -->
-                            <input data-value="stationName" type="text" placeholder="개소명" disabled>
+                            <span>관리 번호</span> <!--스마트정류장, 폴, 분전함, 격납고 -->
+                            <input data-value="stationName" type="text" placeholder="관리 번호" disabled>
                         </li>
                         <li>
                             <span>개소 ID</span>
@@ -1089,7 +1089,7 @@
                 <li><a>추가 메뉴</a></li>
             </ul>
             <dl class="area_title">
-                <dt><i><img src="/images/default/titleIcon03.svg"></i>{개소 ID}{개소 명} 실시간 촬영 영상</dt>
+                <dt><i><img src="/images/default/titleIcon03.svg"></i>{개소 ID}{관리 번호} 실시간 촬영 영상</dt>
                 <dd class="state">미처리</dd>
             </dl>
             <div>
