통계 facillity otp 전력량 통계 추가
- left nav 전력량 항목 추가
- statsOpt.js 생성
- Opt 통계 조회 방법 수정

--- a/danusys-platform/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/default.html
@@ -68,6 +68,7 @@
     <script type="text/javascript" src="/js/pages/dimming.js"></script>
     <script type="text/javascript" src="/js/pages/faceDetection.js"></script>
     <script type="text/javascript" src="/js/pages/stats.js"></script>
+    <script type="text/javascript" src="/js/pages/statsOpt.js"></script>
 
     <script type="text/javascript" src="/js/pages/peopleCount.js"></script>
     <script type="text/javascript" src="/js/pages/electricity.js"></script>
