--- a/danusys-platform/src/main/resources/templates/fragments/default/header.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/header.html
@@ -21,7 +21,7 @@
                     <a href="/pages/inqry/station">조회/관리</a>
                 </li>
                 <li sec:authorize="hasAnyRole('ROLE_stats_rw', 'ROLE_stats_r-')" id="stats">
-                    <a th:href="'/pages/stats/statistics?type='+${@environment.getProperty('stats.type')}">통계</a>
+                    <a th:href="'/pages/stats/statistics?type=event&eventType='+${@environment.getProperty('stats.type')}">통계</a>
                 </li>
                 <li sec:authorize="hasAnyRole('ROLE_config_rw', 'ROLE_config_r-')"
                     th:if="${
