--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/electricityBikeCharging.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/electricityBikeCharging.html
@@ -10,7 +10,7 @@
         <i><img src="/images/default/inquiryTitle.svg"></i>
         <span>조회/관리</span>
         <i><img src="/images/default/settingArrowNext.svg"></i>
-        <span>스마트보안등 전력량 조회</span>
+        <span>자전거 충전소 전력량 조회</span>
     </h4>
     <section class="inquiry_content">
         <article class="search_form" id="searchForm">
