--- a/danusys-platform/src/main/resources/templates/fragments/default/header.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/header.html
@@ -8,12 +8,12 @@
         </h1>
         <ul class="gnm">
             <th:block th:with="municipality=${@environment.getProperty('municipality.name')}">
-                <li sec:authorize="hasAnyRole('ROLE_dashboard_rw', 'ROLE_dashboard_r-')" id="dashboard">
-                    <a th:if="${municipality == '47210000'}" href="/pages/dashboard/dashboard_facility">대시보드</a>
-                    <a th:if="${municipality == '26290000'}" href="/pages/dashboard/dashboard_facility_bsng">대시보드</a>
-                    <a th:if="${municipality == '41210000'}" href="/pages/dashboard/dashboard_facility_gm">대시보드</a>
-                    <a th:if="${municipality == '45210000'}" href="/pages/dashboard/dashboard_drone">대시보드</a>
-                </li>
+<!--                <li sec:authorize="hasAnyRole('ROLE_dashboard_rw', 'ROLE_dashboard_r-')" id="dashboard">-->
+<!--                    <a th:if="${municipality == '47210000'}" href="/pages/dashboard/dashboard_facility">대시보드</a>-->
+<!--                    <a th:if="${municipality == '26290000'}" href="/pages/dashboard/dashboard_facility_bsng">대시보드</a>-->
+<!--                    <a th:if="${municipality == '41210000'}" href="/pages/dashboard/dashboard_facility_gm">대시보드</a>-->
+<!--                    <a th:if="${municipality == '45210000'}" href="/pages/dashboard/dashboard_drone">대시보드</a>-->
+<!--                </li>-->
                 <li sec:authorize="hasAnyRole('ROLE_mntr_rw, ROLE_mntr_r-')" id="mntr">
                     <a href="/pages/mntr">관제</a>
                 </li>
@@ -21,7 +21,8 @@
                     <a href="/pages/inqry/station">조회/관리</a>
                 </li>
                 <li sec:authorize="hasAnyRole('ROLE_stats_rw', 'ROLE_stats_r-')" id="stats">
-                    <a th:href="'/pages/stats/statistics?type=event&eventType='+${@environment.getProperty('stats.type')}">통계</a>
+<!--                    <a th:href="'/pages/stats/statistics?type=event&eventType='+${@environment.getProperty('stats.type')}">통계</a>-->
+                    <a th:href="'/pages/stats/statistics?type=opt&optType=electricityBikeCharging'">통계</a>
                 </li>
                 <li sec:authorize="hasAnyRole('ROLE_config_rw', 'ROLE_config_r-')"
                     th:if="${
