--- a/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
@@ -9,33 +9,33 @@
             <li id="facilities">
                 <a href="/pages/inqry/facilities">시설물 관리</a>
             </li>
-            <li th:if="${municipality == '41210000' or municipality == '26290000'}" id="smartPole" class="multi">
-                <a href="#smartPole">스마트 폴</a>
-                <ul class="accordion_sub_menu">
-                    <li th:if="${municipality == '41210000'}" id="eventSmartPole"><a href="/pages/inqry/eventSmartPole">스마트 폴 이벤트</a></li>
-                    <li th:if="${municipality == '26290000'}" id="eventFaceDetection"><a href="/pages/inqry/eventFaceDetection">용의자 · 실종자 검출</a></li>
-                    <!--<li th:if="${municipality == '45210000'}" id="poleElectricity"><a href="/pages/inqry/poleElectricity">전력량 조회</a></li>-->
-                </ul>
-            </li>
-            <li th:if="${municipality == '41210000' or municipality == '47210000'}" id="smartBusStop" class="multi">
-                <a href="#smartBusStop">스마트 정류장</a>
-                <ul class="accordion_sub_menu">
-                    <li id="eventSmartBusStop"><a href="/pages/inqry/eventSmartBusStop">스마트 정류장 이벤트</a></li>
-                    <!--<li th:if="${municipality == '41210000'}" id="busStopElectricity"><a href="/pages/inqry/busStopElectricity">전력량 조회</a></li>-->
-                </ul>
-            </li>
-            <li th:if="${municipality == '41210000'}" id="peopleCountBus">
-                <a href="/pages/inqry/peopleCountBus">스마트 정류장 이용자 조회</a>
-            </li>
-            <li th:if="${municipality == '41210000'}" id="peopleCountPole">
-                <a href="/pages/inqry/peopleCountPole">스마트 폴 유동인구 조회</a>
-            </li>
+<!--            <li th:if="${municipality == '41210000' or municipality == '26290000'}" id="smartPole" class="multi">-->
+<!--                <a href="#smartPole">스마트 폴</a>-->
+<!--                <ul class="accordion_sub_menu">-->
+<!--                    <li th:if="${municipality == '41210000'}" id="eventSmartPole"><a href="/pages/inqry/eventSmartPole">스마트 폴 이벤트</a></li>-->
+<!--                    <li th:if="${municipality == '26290000'}" id="eventFaceDetection"><a href="/pages/inqry/eventFaceDetection">용의자 · 실종자 검출</a></li>-->
+<!--                    &lt;!&ndash;<li th:if="${municipality == '45210000'}" id="poleElectricity"><a href="/pages/inqry/poleElectricity">전력량 조회</a></li>&ndash;&gt;-->
+<!--                </ul>-->
+<!--            </li>-->
+<!--            <li th:if="${municipality == '41210000' or municipality == '47210000'}" id="smartBusStop" class="multi">-->
+<!--                <a href="#smartBusStop">스마트 정류장</a>-->
+<!--                <ul class="accordion_sub_menu">-->
+<!--                    <li id="eventSmartBusStop"><a href="/pages/inqry/eventSmartBusStop">스마트 정류장 이벤트</a></li>-->
+<!--                    &lt;!&ndash;<li th:if="${municipality == '41210000'}" id="busStopElectricity"><a href="/pages/inqry/busStopElectricity">전력량 조회</a></li>&ndash;&gt;-->
+<!--                </ul>-->
+<!--            </li>-->
+<!--            <li th:if="${municipality == '41210000'}" id="peopleCountBus">-->
+<!--                <a href="/pages/inqry/peopleCountBus">스마트 정류장 이용자 조회</a>-->
+<!--            </li>-->
+<!--            <li th:if="${municipality == '41210000'}" id="peopleCountPole">-->
+<!--                <a href="/pages/inqry/peopleCountPole">스마트 폴 유동인구 조회</a>-->
+<!--            </li>-->
             <li th:if="${municipality == '41210000'}" id="electricity" class="multi">
                 <a href="#electricity">전력량 조회</a>
                 <ul class="accordion_sub_menu">
-                    <li id="electricityBus"><a href="/pages/inqry/electricityBus">스마트 버스 전력량</a></li>
-                    <li id="electricitySunlight"><a href="/pages/inqry/electricitySunlight">태양광 전력량</a></li>
-                    <li id="electricityLampWalk"><a href="/pages/inqry/electricityLampWalk">스마트 보안등 전력량</a></li>
+<!--                    <li id="electricityBus"><a href="/pages/inqry/electricityBus">스마트 버스 전력량</a></li>-->
+<!--                    <li id="electricitySunlight"><a href="/pages/inqry/electricitySunlight">태양광 전력량</a></li>-->
+<!--                    <li id="electricityLampWalk"><a href="/pages/inqry/electricityLampWalk">스마트 보안등 전력량</a></li>-->
                     <li id="electricityBikeCharging"><a href="/pages/inqry/electricityBikeCharging">자전거 충전소 전력량</a></li>
                 </ul>
             </li>
