[2022-10-14] 심규환 로그인 시 RSA 암호화, 복호화 구현(GS인증용)

--- a/danusys-platform/src/main/resources/templates/fragments/default/header.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/header.html
@@ -14,7 +14,8 @@
 <!--                    <a th:if="${municipality == '41210000'}" href="/pages/dashboard/dashboard_facility_gm">대시보드</a>-->
 <!--                    <a th:if="${municipality == '45210000'}" href="/pages/dashboard/dashboard_drone">대시보드</a>-->
 <!--                </li>-->
-                <li sec:authorize="hasAnyRole('ROLE_mntr_rw, ROLE_mntr_r-')" id="mntr">
+<!--                <li sec:authorize="hasAnyRole('ROLE_mntr_rw, ROLE_mntr_r-')" id="mntr">-->
+                <li sec:authorize="hasAnyRole('ROLE_inqry_rw', 'ROLE_inqry_r-')" id="mntr">
                     <a href="/pages/mntr">관제</a>
                 </li>
                 <li sec:authorize="hasAnyRole('ROLE_inqry_rw', 'ROLE_inqry_r-')" id="inqry">
