--- a/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
@@ -104,27 +104,27 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
-                                    <td>대시보드</td>
-                                    <td>
-                                        <span>
-                                            <input type="radio" id="dashboardNot" name="dashboard" data-value="--">
-                                            <label for="dashboardNot"><span class="round"></span></label>
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            <input type="radio" id="dashboardRead" name="dashboard" data-value="r-">
-                                            <label for="dashboardRead"><span class="round"></span></label>
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            <input type="radio" id="dashboardReadAndWrite" name="dashboard" data-value="rw">
-                                            <label for="dashboardReadAndWrite"><span class="round"></span></label>
-                                        </span>
-                                    </td>
-                                </tr>
+<!--                                <tr>-->
+<!--                                    <td>대시보드</td>-->
+<!--                                    <td>-->
+<!--                                        <span>-->
+<!--                                            <input type="radio" id="dashboardNot" name="dashboard" data-value="&#45;&#45;">-->
+<!--                                            <label for="dashboardNot"><span class="round"></span></label>-->
+<!--                                        </span>-->
+<!--                                    </td> -->
+<!--                                    <td>-->
+<!--                                        <span>-->
+<!--                                            <input type="radio" id="dashboardRead" name="dashboard" data-value="r-">-->
+<!--                                            <label for="dashboardRead"><span class="round"></span></label>-->
+<!--                                        </span>-->
+<!--                                    </td>-->
+<!--                                    <td>-->
+<!--                                        <span>-->
+<!--                                            <input type="radio" id="dashboardReadAndWrite" name="dashboard" data-value="rw">-->
+<!--                                            <label for="dashboardReadAndWrite"><span class="round"></span></label>-->
+<!--                                        </span>-->
+<!--                                    </td>-->
+<!--                                </tr>-->
                                 <tr>
                                     <td>관제</td>
                                     <td>
